--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,11 +5,6 @@
   align-items: center;
   width: 1280px;
   margin: 0;
-  padding: 20px;
+  padding: 0 20px;
   /* box-sizing: border-box; */
-}
-
-h1 {
-  font-size: 2rem;
-  margin-bottom: 20px;
 }
