--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,11 +1,12 @@
 .flexContainer {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0;
-  padding: 0 20px;
+  /* padding: 0 20px; */
 }
 
 .button {
