--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -1,11 +1,11 @@
 .imageGallery {
     display: grid;
-    max-width: calc(100vw - 48px);
+    /* max-width: calc(100vw - 48px); */
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     grid-gap: 16px;
     padding: 0;
     list-style: none;
-    margin: 40px auto 0;
+    margin-top: 40px;
 }
 
 .imageCard {
