--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -17,10 +17,11 @@
     justify-content: center;
     align-items: center;
     min-height: 64px;
-    padding-right: 24px;
+    padding: 12px 24px;
+    /* padding-right: 24px;
     padding-left: 24px;
     padding-top: 12px;
-    padding-bottom: 12px;
+    padding-bottom: 12px; */
     color: #fff;
     background-color: #3f51b5;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
@@ -69,6 +70,7 @@
 } */
 
 .searchForm .input {
+    position: relative;
     display: inline-block;
     width: 100%;
     font: inherit;
