--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,18 +4,19 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 1440px;
+  /* max-width: 1440px; */
   margin: 0;
   /* padding: 0 20px; */
 }
 
 .button {
   padding: 8px 16px;
-  border-radius: 2px;
+  border-radius: 0;
   background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
+  width: 100%;
   color: #fff;
   border: 0;
   text-decoration: none;
@@ -28,6 +29,7 @@
   min-width: 180px;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  margin-top: 20px;
 }
 
 .button:hover,
