--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -1,11 +1,11 @@
 .imageGallery {
     display: grid;
-    /* max-width: calc(100vw - 48px); */
+    max-width: calc(100vw - 48px);
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     grid-gap: 16px;
     padding: 0;
     list-style: none;
-    margin-top: 40px;
+    margin: 36px auto 0;
 }
 
 .imageCard {
@@ -13,6 +13,7 @@
     overflow: hidden;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease-in-out;
+    height: 100%;
 }
 
 .imageCard img {
