--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,12 +1,3 @@
-.header {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    background-color: #0000ff;
-}
-
 .searchbar {
     width: 100%;
     top: 0;
@@ -18,10 +9,6 @@
     align-items: center;
     min-height: 64px;
     padding: 12px 24px;
-    /* padding-right: 24px;
-    padding-left: 24px;
-    padding-top: 12px;
-    padding-bottom: 12px; */
     color: #fff;
     background-color: #3f51b5;
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
@@ -35,27 +22,23 @@
     max-width: 600px;
     background-color: #fff;
     border-radius: 3px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
-/* .searchForm .button {
+.button {
     display: inline-block;
     width: 48px;
     height: 48px;
     border: 0;
-    background-image: url('https://www.svgrepo.com/show/509394/search.svg');
-    background-size: 60%;
-    background-repeat: no-repeat;
-    background-position: center;
     opacity: 0.6;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
     outline: none;
-} */
+}
 
-/* .searchForm .button:hover {
+.button:hover {
     opacity: 1;
-} */
+}
 
 /* .searchForm .buttonLabel {
     position: absolute;
@@ -69,7 +52,7 @@
     border: 0;
 } */
 
-.searchForm .input {
+.input {
     position: relative;
     display: inline-block;
     width: 100%;
@@ -81,7 +64,11 @@
     padding-right: 4px;
 }
 
-.searchForm .input::placeholder {
+.input::placeholder {
     font: inherit;
     font-size: 18px;
+}
+
+.icon {
+    size: 24px;
 }
