--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -21,36 +21,27 @@
     width: 100%;
     max-width: 600px;
     background-color: #fff;
-    border-radius: 3px;
-    /* overflow: hidden; */
+    border: none;
+    border-radius: 8px;
+    overflow: hidden;
 }
 
 .button {
     display: inline-block;
     width: 48px;
     height: 48px;
-    border: 0;
+    border: none;
     opacity: 0.6;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
     outline: none;
+    border-radius: 8px;
+
 }
 
 .button:hover {
     opacity: 1;
 }
-
-/* .searchForm .buttonLabel {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    clip-path: inset(50%);
-    border: 0;
-} */
 
 .input {
     position: relative;
@@ -60,8 +51,7 @@
     font-size: 20px;
     border: none;
     outline: none;
-    padding-left: 4px;
-    padding-right: 4px;
+    padding-left: 8px;
 }
 
 .input::placeholder {
@@ -70,5 +60,7 @@
 }
 
 .icon {
-    size: 24px;
+
+    height: 24px;
+    width: 24px;
 }
