--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,7 +9,7 @@
   /* padding: 0 20px; */
 }
 
-.button {
+/* .button {
   padding: 8px 16px;
   border-radius: 0;
   background-color: #3f51b5;
@@ -35,7 +35,7 @@
 .button:hover,
 .button:focus {
   background-color: #303f9f;
-}
+} */
 
 .modalImage {
   max-width: 90vw;
